# GTQ_pmsm

./: CMakeLists.txt  Compensator.h  IRLS.h  LICENSE  PMSM.cpp  PMSM.h  PMSM_sim.h  README.md  UML.uxf  backstepping.h  commincation.h  current_controller.cpp  current_controller.h  identifier.h  inverter.cpp  inverter.h  main  main.cpp  note.m  pyplot.py  sda.h  speed_control.cpp  speed_controller.h  svpwm.h  system.cpp  system.h
data/: cholesky.txt  irls.txt  sda_pmsm.txt
example/: IRLS_based_onestep_without_delay.cpp  bool_test.cpp  enum_test.cpp  gtq_client.cpp  gtq_server.cpp  onestep_without_delay.cpp  parameter_identification_IRLS.cc  pmsm_controller.cpp  pmsm_plant.cpp  sda_pmsm.cpp  serial_receive.cpp  serial_send.cpp  svpwm_test.cpp  test_Eigen.cpp  test_Eigen2.cpp  test_Eigen3.cpp  test_PMSM_model.cpp
example/python/: irls.py  sda_pmsm.py  svpwm.py
notebooks/: 卡尔曼滤波器.md
src/: Compensator.cpp  IRLS.cpp  PMSM.cpp  PMSM_sim.cpp  client.cpp  controller.cpp  current_controller.cpp  identifer.cpp  inverter.cpp  server.cpp  speed_control.cpp  svpwm.cpp  system.cpp
